unpackaged/main/default/objects/ETT_Staging_Added_Service__c/ETT_Staging_Added_Service__c.object-meta.xml
<CustomObject>
    <label>Staging Added Service</label>
    <nameField>
        <displayFormat>ASN-{0000}</displayFormat>
        <label>Staging Added Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Added Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>