unpackaged/main/default/objects/ETT_Staging_Added_Service__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Added Services</relationshipLabel>
    <relationshipName>Staging_Added_Services</relationshipName>
    <type>Lookup</type>
</CustomField>