unpackaged/main/default/objects/ETT_Staging_Added_Service__c/fields/ETT_Out_Source__c.field-meta.xml
<CustomField>
    <fullName>ETT_Out_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Source</label>
    <type>Checkbox</type>
</CustomField>