unpackaged/main/default/objects/ETT_Staging_Added_Service__c/fields/ETT_Own__c.field-meta.xml
<CustomField>
    <fullName>ETT_Own__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own</label>
    <type>Checkbox</type>
</CustomField>