unpackaged/main/default/objects/ETT_Staging_Added_Service__c/fields/ETT_Services__c.field-meta.xml
<CustomField>
    <fullName>ETT_Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>