unpackaged/main/default/objects/ETT_Staging_Added_Service__c/fields/ETT_Supplier_Details__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>