unpackaged/main/default/objects/ETT_Staging_Added_Service__c/validationRules/ETT_Out_source_or_Own_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Out_source_or_Own_validation</fullName>
    <active>true</active>
    <description>Either, Outsource or own should have the value.</description>
    <errorConditionFormula>(ETT_Out_Source__c &amp;&amp; ETT_Own__c) || (!ETT_Out_Source__c &amp;&amp; !ETT_Own__c)</errorConditionFormula>
    <errorMessage>Either, Outsource or Own one should have the value.</errorMessage>
</ValidationRule>