unpackaged/main/default/objects/ETT_Staging_Added_Service__c/validationRules/Validation_rule_for_Out_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_Out_Source</fullName>
    <active>true</active>
    <description>If you selects outsource, then supplier details are mandatory</description>
    <errorConditionFormula>AND( ETT_Out_Source__c = True,
 ISBLANK( ETT_Supplier_Details__c ) )</errorConditionFormula>
    <errorMessage>Please mention the supplier details.</errorMessage>
</ValidationRule>